feat: 取消自动续局，改为全员确认后续局 + 修复重购
- SHOWDOWN阶段展示所有人手牌和牌型（赢家高亮）
- 每局结束后需要所有人点击「确认下一局」才开始
- 确认进度实时显示（已确认 x/y）
- 已确认的玩家在座位上显示✓标记
- 修复重购：允许在SHOWDOWN/SETTLED阶段重购
- 筹码不足2人时回到WAITING让玩家重购后重新准备

--- a/public/index.html
+++ b/public/index.html
@@ -96,6 +96,17 @@
       <button id="btnRebuy" class="btn btn-secondary btn-large hidden">💰 重购 1000</button>
     </div>
 
+    <!-- SHOWDOWN 确认区 -->
+    <div id="showdownBar" class="showdown-bar hidden">
+      <div class="showdown-info">
+        <span id="confirmStatus" class="confirm-status"></span>
+      </div>
+      <div class="showdown-actions">
+        <button id="btnConfirmNext" class="btn btn-primary btn-large">✅ 确认下一局</button>
+        <button id="btnRebuyShowdown" class="btn btn-secondary btn-large hidden">💰 重购 1000</button>
+      </div>
+    </div>
+
     <!-- 消息（可拖拽） -->
     <div id="messageLog" class="message-log">
       <div class="drag-handle">💬 消息 <span class="drag-hint">可拖动</span></div>
